# evil-ld

./: .gitignore  Cargo.toml  Makefile  entry.s  flake.nix  main.c  rust-toolchain.toml
nix/: evil-ld.nix
src/: common.c  common.h  consts.rs  entry.s  errno-defs.h  main.c  main.rs  run.s  syscalls.h  syscalls.s
test/: .gitignore  Dockerfile  Makefile  example.c  run.sh
