[package]
name = "evil-ld"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
fern ={ version = "0.7" }
log = { version = "0.4" }
nix = { version = "0.29", features = ["process", "user", "personality"] }
owo-colors = { version = "4", features = ["supports-colors"] }
